hphp/hack/test/typecheck/array/safe_vector_array/disallows_a_variable_that_may_be_an_array_of_string_when_array_of_int_to_string_is_required.php
<?hh // strict

function consumeArrayOfIntToString(array<int, string> $_): void {}

/**
 * Test confilicting AKempty promotions - in one branch it's promoted to
 * AKvec, in another to AKmap. Should be unresolved of those two afterwards.
 */
function test(): void {
  $array = array();
  if (true) {
    $array[] = '';
  } else {
    $array[0] = '';
  }
  consumeArrayOfIntToString($array);
}
